--- a/src/views/cart.html
+++ b/src/views/cart.html
@@ -12,33 +12,25 @@
 </head>
 <body>
     <header>
-       
         <div class="logo">
-            <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
+            <div class="borde-logo"><a href="/"><img src="/public/images/Logo.png"></a>
             </div>
         </div>
-
-        <div class="botones-header">
-
-            <div>
-                <ul>
-                    <li class="tendencias"><a href="#">Tendencias</a></li>
-                    <li class="descuentos"><a href="#">Descuentos</a></li>
-
-                    <div class="forms">
-                        <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
-                        <li class="login"> <a href="/login">Ingresar </a></li>
-                    </div>
+        <div>
+            <div class="header-menu">
+                <ul class="nav">
+                    <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
+                    <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
+                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
+                    <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
                     <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
                 </ul>
+
             </div>
-
-        </div>
-
     </header>
     <main class="main-cart">
         <h1>Bolsa de productos</h1>  
-        <div class="producto"><img class="product-detail" src="/public/images/producto-1.jpg">
+        <div class="producto"><img class="product-detail" src="/public/images/product.png">
             <div class="descripcion">
             <br>
             <p>Crema Facial</p>
@@ -62,16 +54,34 @@
         </div>
     </main>
     <footer>
+        <section class="grilla-footer">
+            <div>
+                <p class="titulo_footer">ACERCA DE NOSOTROS</p>
+            </div>
+
+            <div>
+                <p class="titulo_footer">SERVICIO AL CLIENTE</p>
+                <a href="https://autogestion.produccion.gob.ar/consumidores" class="social"><p>Defensa del consumidor</p></a>
+                <p>Como cancelar una compra</p>
+            </div>
+            <div>
+                <p class="titulo_footer">FAQ</p>
+                <p>Preguntas Frecuentes</p>
+                <p>Politicas de Privacidad</p>
+                <p>Términos y Condiciones</p>
+        </section>
 
 
-       <div class="logos">  
-    
-        <i class="fa-brands fa-youtube"></i>
-        <i class="fa-brands fa-pinterest"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-facebook"></i>
-    
-       </div>
+
+        <div class="logos">
+
+            <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" class="social"><i class="fa-brands fa-facebook"></i></a>
+
+        </div>
+            <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
         
     </footer>
 </body>
