--- a/src/views/home.html
+++ b/src/views/home.html
@@ -75,7 +75,7 @@
 
             <div>
                 <p class="titulo_footer">SERVICIO AL CLIENTE</p>
-                <a href="https://autogestion.produccion.gob.ar/consumidores"><p>Defensa del consumidor</p></a>
+                <a href="https://autogestion.produccion.gob.ar/consumidores" class="social"><p>Defensa del consumidor</p></a>
                 <p>Como cancelar una compra</p>
             </div>
             <div>
@@ -89,10 +89,10 @@
 
         <div class="logos">
 
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-pinterest"></i>
-            <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D"><i class="fa-brands fa-instagram"></i></a>
-            <i class="fa-brands fa-facebook"></i>
+            <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest"></i></a>
+            <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" class="social"><i class="fa-brands fa-facebook"></i></a>
 
         </div>
             <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
