--- a/src/views/login.html
+++ b/src/views/login.html
@@ -12,23 +12,23 @@
 </head>
 <body>
    
-<header>
-    <div class="logo">
-        <div class="borde-logo"><a href="/"><img src="/public/images/Logo1.png"></a>
+    <header>
+        <div class="logo">
+            <div class="borde-logo"><a href="/"><img src="/public/images/Logo.png"></a>
+            </div>
         </div>
-    </div>
-    <div>
-        <div class="header-menu">
-            <ul>
-                <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
-                <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
-                <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
-                <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
-                <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
-            </ul>
+        <div>
+            <div class="header-menu">
+                <ul>
+                    <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
+                    <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
+                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
+                    <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
+                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
+                </ul>
 
-        </div>
-</header>
+            </div>
+    </header>
     <main class="main">
        
         <div class="login-box">
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="password">
-                    <input type="pass" placeholder="Contraseña"> </input>
+                    <input type="password" placeholder="Contraseña"> </input>
                 </div>
 
                 
@@ -54,24 +54,15 @@
                     <div class="pregunta">
 
                         <a class="contra" href="/" >Olvide mi Contraseña</a>
-                        
-                        <a class="register"     href="/register" >Todavia no me registre</a>
-                </div>
+                        <br>
+                        <a class="register" href="/register" >Todavia no me registre</a>
+                    </div>
                     </form> 
         
                 </div>
         
         </div>
-       
-           
-
-        
-       
-
-        
-    </main>
-    <footer>
-
+            
         <footer>
             <section class="grilla-footer">
                 <div>
@@ -80,7 +71,7 @@
     
                 <div>
                     <p class="titulo_footer">SERVICIO AL CLIENTE</p>
-                    <p>Defensa del consumidor</p>
+                    <a href="https://autogestion.produccion.gob.ar/consumidores" class="social"><p>Defensa del consumidor</p></a>
                     <p>Como cancelar una compra</p>
                 </div>
                 <div>
@@ -93,17 +84,16 @@
     
     
             <div class="logos">
-    
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-pinterest"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-facebook"></i>
+
+                <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="social"><i class="fa-brands fa-facebook"></i></a>
     
             </div>
                 <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
             
         </footer>
-    
-    </footer>
+    </main>
 </body>
 </html>
