--- a/src/views/register.html
+++ b/src/views/register.html
@@ -15,28 +15,21 @@
 <body>
 
     <header>
-
         <div class="logo">
-            <div class="borde-logo"><a href ="/"><img src="/public/images/Logo1.png"></a>
+            <div class="borde-logo"><a href="/"><img src="/public/images/Logo.png"></a>
             </div>
         </div>
-
-        <div class="botones-header">
-
-            <div>
+        <div>
+            <div class="header-menu">
                 <ul>
-                    <li class="tendencias"><a href="#">Tendencias</a></li>
-                    <li class="descuentos"><a href="#">Descuentos</a></li>
-
-                    <div class="forms">
-                        <li class="cuenta"> <a href="/register">Crear cuenta </a></li>
-                        <li class="login"> <a href="/login">Ingresar </a></li>
-                    </div>
-                    <li class="cart"><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
+                    <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
+                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
+                    <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
+                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
                 </ul>
-            </div>
 
-        </div>
+            </div>
     </header>
     <main class="main">
 
@@ -67,26 +60,18 @@
 
 
                     <div class="password">
-                        <input type="pass" placeholder="Contraseña"> </input>
+                        <input type="password" placeholder="Contraseña"> </input>
                     </div>
 
                     <div class="confirm">
-                        <input type="pass" placeholder="Confirmar contraseña"> </input>
+                        <input type="password" placeholder="Confirmar contraseña"> </input>
                     </div>
 
                     <div class="botones">
                         <button class="enviar1" type="submit">Registrarme</button>
-                        <button class="borrar" type="erase">Borrar</button>
+                        <button class="borrar" type="reset">Borrar</button>
                     </div>
-
-
-
-
-
-    </main>
     <footer>
-
-        <footer>
             <section class="grilla-footer">
                 <div>
                     <p class="titulo_footer">ACERCA DE NOSOTROS</p>
@@ -94,7 +79,7 @@
     
                 <div>
                     <p class="titulo_footer">SERVICIO AL CLIENTE</p>
-                    <p>Defensa del consumidor</p>
+                    <a href="https://autogestion.produccion.gob.ar/consumidores" class="social"><p>Defensa del consumidor</p></a>
                     <p>Como cancelar una compra</p>
                 </div>
                 <div>
@@ -107,18 +92,17 @@
     
     
             <div class="logos">
-    
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-pinterest"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-facebook"></i>
+
+                <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="social"><i class="fa-brands fa-facebook"></i></a>
     
             </div>
                 <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
             
-        </footer>
-    
     </footer>
+    </main> 
 </body>
 
 </html>
