--- a/src/views/home.html
+++ b/src/views/home.html
@@ -23,10 +23,15 @@
         </div>
         <div>
             <div class="header-menu">
-                <ul>
+                <ul class="nav">    
                     <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
                     <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
-                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
+                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a>
+                        <ul>
+                            <li><a href="/login">Login</a></li>
+						    <li><a href="/register">Registrarse</a></li>
+                        </ul>
+                    </li>
                     <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
                     <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
                 </ul>
