--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -22,6 +22,23 @@ header {
     color: white;
 }
 
+
+.nav li a {
+    text-decoration:none;
+    padding:5px;
+    display:block;
+}
+
+.nav li ul {
+    display:none;
+    position:absolute;
+    min-width:140px;
+}
+
+.nav li:hover > ul {
+    display:block;
+}
+
 a{
     text-decoration: none;
     color: black;
