--- a/src/views/register.html
+++ b/src/views/register.html
@@ -19,17 +19,21 @@
             <div class="borde-logo"><a href="/"><img src="/public/images/Logo.png"></a>
             </div>
         </div>
-        <div>
-            <div class="header-menu">
-                <ul>
-                    <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
-                    <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
-                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a></li>
-                    <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
-                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
-                </ul>
+        <div class="header-menu">
+            <ul class="nav">    
+                <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
+                <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
+                <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a>
+                    <ul>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/register">Registrarse</a></li>
+                    </ul>
+                </li>
+                <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
+                <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
+            </ul>
 
-            </div>
+        </div>
     </header>
     <main class="main">
 
