--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -18,7 +18,7 @@
 
     <header>
         <div class="logo">
-            <div class="borde-logo"><a href="/"><img src="/public/images/Logo.png"></a>
+            <div class="borde-logo"><a href="/"><img src="/public/images/logo2.png"></a>
             </div>
         </div>
         <div>
@@ -80,7 +80,7 @@
 
             <div>
                 <p class="titulo_footer">SERVICIO AL CLIENTE</p>
-                <a href="https://autogestion.produccion.gob.ar/consumidores" class="social"><p>Defensa del consumidor</p></a>
+                <a href="https://autogestion.produccion.gob.ar/consumidores" class="social" target="blank"><p>Defensa del consumidor</p></a>
                 <p>Como cancelar una compra</p>
             </div>
             <div>
@@ -94,10 +94,10 @@
 
         <div class="logos">
 
-            <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest"></i></a>
-            <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#" class="social"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social" target="blank"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest" target="blank"></i></a>
+            <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social" target="blank"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Hairsy-101656439312920" class="social" target="blank"><i class="fa-brands fa-facebook"></i></a>
 
         </div>
             <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
