--- a/src/views/product.ejs
+++ b/src/views/product.ejs
@@ -76,7 +76,7 @@
     
                 <div>
                     <p class="titulo_footer">SERVICIO AL CLIENTE</p>
-                    <a href="https://autogestion.produccion.gob.ar/consumidores" class="social"><p>Defensa del consumidor</p></a>
+                    <a href="https://autogestion.produccion.gob.ar/consumidores" class="social" target="blank"><p>Defensa del consumidor</p></a>
                     <p>Como cancelar una compra</p>
                 </div>
                 <div>
@@ -90,10 +90,10 @@
     
             <div class="logos">
 
-                <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social"><i class="fa-brands fa-youtube"></i></a>
-                <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest"></i></a>
-                <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" class="social"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social" target="blank"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest" target="blank"></i></a>
+                <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social" target="blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.facebook.com/Hairsy-101656439312920" class="social" target="blank"><i class="fa-brands fa-facebook"></i></a>
     
             </div>
                 <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
