--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -95,7 +95,7 @@
         <div class="logos">
 
             <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social" target="blank"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://pin.it/6j4TzyC" class="social"><i class="fa-brands fa-pinterest" target="blank"></i></a>
+            <a href="https://pin.it/6j4TzyC" class="social" target="blank"><i class="fa-brands fa-pinterest"></i></a>
             <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social" target="blank"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://www.facebook.com/Hairsy-101656439312920" class="social" target="blank"><i class="fa-brands fa-facebook"></i></a>
 
