--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -39,10 +39,10 @@
             </div>
     </header>
 
+    <main>
+    
 
-    <div class="main-container">
-
-        <div id="banner">
+        <div id="backgrund>
             <video loop muted autoplay preload="auto">
                 <source src="/public/images/abstract1.mp4">
             </video>
@@ -66,8 +66,8 @@
             </div>
         </div>
 
-    </div>
-
+    
+</main>
 
 
 
