--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -42,7 +42,7 @@
     <main>
     
 
-        <div id="backgrund>
+        <div id="background">
             <video loop muted autoplay preload="auto">
                 <source src="/public/images/abstract1.mp4">
             </video>
