--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -29,7 +29,6 @@ main {
     
 #background {
     position: relative;
-    height: 100vh;
     width:100%;
     background-color: white;
     display: flex;
@@ -64,13 +63,12 @@ main {
 
 .fotos {
     z-index: 1;
-    
     top: 20%;  
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    margin-top:100px
 }
 
 
@@ -112,7 +110,7 @@ a {
 
 
 .nav li a {
-    color:#fff;
+    color: black;
     text-decoration:none;
     padding:5px;
     display:block;
@@ -211,23 +209,22 @@ p{
 @media (min-width: 768px){
     /* Laptop */
    
+    #background{
+        height: 100vh;
+    }
     video {
         display: block;
     }
     .fotos {
         flex-direction: row; 
+        position: absolute;
      }
      footer {
         margin-top: 0px;
     }
-    .fotos {
-       
-        position: absolute;
-        
-                height: 60vh;
+    .nav li a {
+        color: white;
     }
-    
-
 }
 
 
