Arreglo logo y agrego partials

--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -60,6 +60,10 @@ main {
 }
 /*******************************video************************************************/
 
+.ofertas {
+    
+   
+}
 
 .fotos {
     z-index: 1;
@@ -196,7 +200,10 @@ p{
     .fotos {
         flex-direction: column; 
      }
-   
+   .ofertas {
+        display: flex;
+        top: 200px;
+   }
 }
 
 @media (min-width: 460px){
