--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,43 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include('partials/head') %> 
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link href="/css/home-styles.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a446d30822.js" crossorigin="anonymous"></script>
+<link href="/css/home-styles.css" rel="stylesheet">
 
-
-    <title>Hairsy</title>
 </head>
 
 <body>
 
-    <header>
-        <div class="logo">
-            <div class="borde-logo"><a href="/"><img src="/public/images/logo2.png"></a>
-            </div>
-        </div>
-        <div>
-            <div class="header-menu">
-                <ul class="nav">    
-                    <li class="menu"><a href="#"><i class="fas fa-thin fa-bars"></i></a></li>
-                    <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
-                    <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a>
-                        <ul>
-                            <li><a href="/login">Login</a></li>
-						    <li><a href="/register">Registrarse</a></li>
-                        </ul>
-                    </li>
-                    <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
-                    <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
-                </ul>
-
-            </div>
-    </header>
+    <%- include('partials/header') %> 
 
     <main>
     
@@ -47,6 +16,8 @@
                 <source src="/public/images/abstract1.mp4">
             </video>
         </div>
+
+        <div class="ofertas"><img src="/public/images/ofertas.png"></div>
 
         <div class="fotos">
 
@@ -71,38 +42,9 @@
 
 
 
+<%- include('partials/footer') %> 
+   
 
-    <footer>
-        <section class="grilla-footer">
-            <div>
-                <p class="titulo_footer">ACERCA DE NOSOTROS</p>
-            </div>
-
-            <div>
-                <p class="titulo_footer">SERVICIO AL CLIENTE</p>
-                <a href="https://autogestion.produccion.gob.ar/consumidores" class="social" target="blank"><p>Defensa del consumidor</p></a>
-                <p>Como cancelar una compra</p>
-            </div>
-            <div>
-                <p class="titulo_footer">FAQ</p>
-                <p>Preguntas Frecuentes</p>
-                <p>Politicas de Privacidad</p>
-                <p>Términos y Condiciones</p>
-        </section>
-
-
-
-        <div class="logos">
-
-            <a href="https://youtube.com/channel/UCdnyRINr0-43MwmgKVeOgag" class="social" target="blank"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://pin.it/6j4TzyC" class="social" target="blank"><i class="fa-brands fa-pinterest"></i></a>
-            <a href="https://www.instagram.com/hairsy.lujoparatucabello/?igshid=YmMyMTA2M2Y%3D" class="social" target="blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/Hairsy-101656439312920" class="social" target="blank"><i class="fa-brands fa-facebook"></i></a>
-
-        </div>
-            <div class="marcaRegistrada"><p>Hairsy Inc <i class="fa-solid fa-copyright"> 2022</i></p></div>
-        
-    </footer>
 
 </body>
 
