--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -174,6 +174,12 @@ h2 {
     .fotos {
         flex-direction: column; 
      }
+     .logo {
+        height: 13vh;
+        width: 18vh;
+        margin-top: 22px;
+    }
+   
    
 }
 
@@ -183,6 +189,11 @@ h2 {
     .fotos {
         flex-direction: column; 
      }
+     .logo {
+        height: 13vh;
+        width: 18vh;
+        margin-top: 20px;
+    }
    
 }
 @media (min-width: 768px){
