--- a/public/css/product-styles.css
+++ b/public/css/product-styles.css
@@ -183,6 +183,11 @@ h3{
     .fotos {
         flex-direction: column; 
      }
+     .logo {
+        height: 13vh;
+        width: 18vh;
+        margin-top: 22px;
+    }
    
 }
 
@@ -192,7 +197,11 @@ h3{
     .fotos {
         flex-direction: column; 
      }
-   
+     .logo {
+        height: 13vh;
+        width: 18vh;
+        margin-top: 20px;
+    }
 }
 @media (min-width: 768px){
     /* Laptop */
