Al dia Sprint 3, que arranque el 4 nomas!!

--- a/public/css/home-styles.css
+++ b/public/css/home-styles.css
@@ -206,6 +206,9 @@ p{
     width: 18vh;
     margin-top: 17px;
 }
+.blanco {
+    display: none;
+}
 }
 
 @media (min-width: 460px){
@@ -224,6 +227,10 @@ p{
         height: 13vh;
         width: 18vh;
         margin-top: 16px;
+    }
+
+    .blanco {
+        display: none;
     }
 }
 @media (min-width: 768px){
@@ -248,6 +255,12 @@ p{
     .ofertas {
         display: flex;
    
+    }
+    .negro {
+        display: none;
+    }
+    .blanco {
+        display: flex;
     }
 }
 
