--- a/src/views/products/product.ejs
+++ b/src/views/products/product.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head') %> 
+<%- include('../partials/head') %> 
     
 <link href="/css/product-styles.css" rel="stylesheet">
 
@@ -6,7 +6,7 @@
 
 <body>
     
-    <%- include('partials/header') %> 
+    <%- include('../partials/header') %> 
 
     <main>
         <p class="banner">ENVIOS GRATIS A PARTIR DE $1000!</p>
@@ -41,7 +41,7 @@
         </section>
     </main>
     
-    <%- include('partials/footer') %> 
+    <%- include('../partials/footer') %> 
 
 </body>
 </html>
