--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head') %>
+<%- include('../partials/head') %>
 
     <link href="/css/login-styles.css" rel="stylesheet">
 
@@ -6,7 +6,7 @@
 
     <body>
 
-        <%- include('partials/header') %>
+        <%- include('../partials/header') %>
 
             <main class="main">
 
@@ -45,7 +45,7 @@
 
             </main>
 
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
 
     </body>
 
