--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <div class="borde-logo"><a href="/"><img src="/public/images/logo2.png"></a>
+        <div class="borde-logo"><a href="/"><img class="negro" src="/public/images/logo2.png"><img class="blanco" src="/public/images/logo2b.png"></a>
         </div>
     </div>
     <div>
@@ -10,12 +10,12 @@
                 <li class="wish-list"><a href="#"><i class="fas fa-thin fa-heart"></i></a></li>
                 <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a>
                     <ul>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/register">Registrarse</a></li>
+                        <li><a href="/user/login">Login</a></li>
+                        <li><a href="/user/register">Registrarse</a></li>
                     </ul>
                 </li>
                 <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
-                <li class="cart"><a href="/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
+                <li class="cart"><a href="/user/cart"><i class="fa-solid fa-cart-shopping"></a></i></li>
             </ul>
 
         </div>
