--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/head') %> 
+<%- include('../partials/head') %> 
 
     <link href="/css/register-styles.css" rel="stylesheet">
 
@@ -6,7 +6,7 @@
 
 <body>
 
-    <%- include('partials/header') %> 
+    <%- include('../partials/header') %> 
    
     <main class="main">
 
@@ -51,7 +51,7 @@
    
     </main> 
     
-    <%- include('partials/footer') %> 
+    <%- include('../partials/footer') %> 
 
 </body>
 
