--- a/public/css/login-styles.css
+++ b/public/css/login-styles.css
@@ -60,12 +60,19 @@ ul {
     }
 
 .logo {
-    
     display: flex;
     width: 15%;
     padding: 5px;
-
 }
+
+.negro{
+    display: block;
+}
+
+.blanco {
+    display:none;
+}
+
 footer {
     width: 100vw;
     margin-top: 250px;
@@ -175,11 +182,13 @@ h2 {
         flex-direction: column; 
      }
      .logo {
-        height: 13vh;
-        width: 18vh;
-        margin-top: 22px;
+      height: 13vh;
+      width: 18vh;
+      margin-top: 10px;
     }
-   
+    .blanco {
+      display: none;
+    }
    
 }
 
@@ -190,10 +199,14 @@ h2 {
         flex-direction: column; 
      }
      .logo {
-        height: 13vh;
-        width: 18vh;
-        margin-top: 20px;
-    }
+         height: 13vh;
+         width: 18vh;
+         margin-top: 10px;
+     }
+ 
+     .blanco {
+         display: none;
+     }
    
 }
 @media (min-width: 768px){
@@ -205,7 +218,7 @@ h2 {
     .fotos {
         flex-direction: row; 
      }
-   
+    
  
 
 }
