--- a/src/views/user/login.ejs
+++ b/src/views/user/login.ejs
@@ -34,7 +34,7 @@
 
                                 <a class="contra" href="/">Olvide mi Contraseña</a>
                                 <br>
-                                <a class="register" href="/register">Todavia no me registre</a>
+                                <a class="register" href="/user/register">Todavia no me registre</a>
                             </div>
                         </form>
 
