Creacion product.json y user.json

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,7 +11,7 @@
                 <li class="user"><a href="#"><i class="fas fa-thin fa-user"></i></a>
                     <ul>
                         <li><a href="/user/login">Login</a></li>
-                        <li><a href="/user/register">Registrarse</a></li>
+                        <li><a href="/user/register">Register</a></li>
                     </ul>
                 </li>
                 <li class="contact"><a href="#"><i class="fas fa-thin fa-headphones"></i></a></li>
