--- a/src/views/user/register.ejs
+++ b/src/views/user/register.ejs
@@ -27,9 +27,9 @@
                         <input type="date" name="fecha de nacimiento"> </input>
                     </div>
 
-                    <div class="domicilio">
+                    <div class="mail">
 
-                        <input type="text" placeholder="Domicilio"> </input>
+                        <input type="mail" placeholder="E-mail"> </input>
                     </div>
 
 
